# flutter-whisper-voice-notes

./: .gitignore  DEVELOPMENT_NOTES.md  README.md  WEAROS_CONNECTION_GUIDE.md  pubspec.yaml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/jovicheer/whisper_voice_notes/service/: WearDataModels.kt  WearSyncManager.kt  WearSyncManagerHolder.kt
android/app/src/main/kotlin/com/jovicheer/whisper_voice_notes/: MainActivity.kt
android/app/src/main/kotlin/com/jovicheer/whisper_voice_notes/data/model/: WearCommunicationModels.kt
android/app/src/main/kotlin/com/jovicheer/whisper_voice_notes/service/: PhoneWearCommunicationService.kt
android/app/src/main/kotlin/com/jovicheer/whisper_voice_notes/util/: AudioUtils.kt  Constants.kt
android/app/src/main/res/xml/: wear.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/pages/: home_page.dart  voice_recorder_page.dart  whisper_test_page.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
